--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "nuxt": "^3.12.1",
+    "swiper": "^11.1.4",
     "vue": "^3.4.27",
     "vue-router": "^4.3.3"
   },
