--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@nuxtjs-alt/axios": "^1.1.0",
     "@nuxtjs/axios": "^5.13.6",
     "bootstrap": "^5.3.3",
