--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@nuxtjs-alt/axios": "^1.1.0",
-    "@nuxtjs/axios": "^5.13.6",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "nuxt": "^3.12.1",
+    "nuxt-directus": "^5.6.1",
     "nuxt-swiper": "^1.2.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.3"
