--- a/directus/docker-compose.yml
+++ b/directus/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       DB_CLIENT: 'sqlite3'
       DB_FILENAME: '/directus/database/data.db'
       WEBSOCKETS_ENABLED: 'true'
-      PUBLIC_URL: 'http://localhost:8055'
+      PUBLIC_URL: 'https://naturaonecoat-cc85b1fdbbef.herokuapp.com'
       CORS_ENABLED: 'true'
       CORS_ORIGIN: 'http://localhost:3000'
       CORS_METHODS: 'GET,POST,PATCH,PUT,DELETE,OPTIONS'
