--- a/directus/docker-compose.yml
+++ b/directus/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       WEBSOCKETS_ENABLED: 'true'
       PUBLIC_URL: 'https://naturaonecoat-cc85b1fdbbef.herokuapp.com'
       CORS_ENABLED: 'true'
-      CORS_ORIGIN: 'http://localhost:3000,https://naturaonecoat.vercel.app/'
+      CORS_ORIGIN: 'http://localhost:3000,https://naturaonecoat.vercel.app'
       CORS_METHODS: 'GET,POST,PATCH,PUT,DELETE,OPTIONS'
       CORS_HEADERS: 'Content-Type,Authorization'
       CORS_CREDENTIALS: 'true'
