--- a/directus/docker-compose.yml
+++ b/directus/docker-compose.yml
@@ -15,9 +15,9 @@ services:
       DB_CLIENT: 'sqlite3'
       DB_FILENAME: '/directus/database/data.db'
       WEBSOCKETS_ENABLED: 'true'
-      PUBLIC_URL: 'https://naturaonecoat-cc85b1fdbbef.herokuapp.com'
+      PUBLIC_URL: 'http://localhost:8055'
       CORS_ENABLED: 'true'
-      CORS_ORIGIN: 'http://localhost:3000,https://naturaonecoat.vercel.app'
+      CORS_ORIGIN: 'http://localhost:3000'
       CORS_METHODS: 'GET,POST,PATCH,PUT,DELETE,OPTIONS'
       CORS_HEADERS: 'Content-Type,Authorization'
       CORS_CREDENTIALS: 'true'
