--- a/directus/docker-compose.yml
+++ b/directus/docker-compose.yml
@@ -12,8 +12,13 @@ services:
       SECRET: 'SuperSecureRandomKey123!@#'
       ADMIN_EMAIL: 'root@root.com'
       ADMIN_PASSWORD: '12root34'
-      DB_CLIENT: 'sqlite3'
-      DB_FILENAME: '/directus/database/data.db'
+      DB_CLIENT: 'pg'
+      DB_HOST: 'c8lj070d5ubs83.cluster-czrs8kj4isg7.us-east-1.rds.amazonaws.com'
+      DB_PORT: '5432'
+      DB_DATABASE: 'ddf8fhht60hi19'
+      DB_USER: 'u7hipdmfa7bhhl'
+      DB_PASSWORD: 'p1b8fcbcbcc880da4d33d24ab758ab42e3a0da154e8c29e7d683025caeba43d0c'
+      DB_SSL: '{"rejectUnauthorized":false}'
       WEBSOCKETS_ENABLED: 'true'
       PUBLIC_URL: 'http://localhost:8055'
       CORS_ENABLED: 'true'
