--- a/directus/docker-compose.yml
+++ b/directus/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       WEBSOCKETS_ENABLED: 'true'
       PUBLIC_URL: 'http://localhost:8055'
       CORS_ENABLED: 'true'
-      CORS_ORIGIN: 'http://localhost:3000'
+      CORS_ORIGIN: 'https://naturaonecoat.vercel.app'
       CORS_METHODS: 'GET,POST,PATCH,PUT,DELETE,OPTIONS'
       CORS_HEADERS: 'Content-Type,Authorization'
       CORS_CREDENTIALS: 'true'
