--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
   "singleQuote": true,
   "semi": false,
-  "tabWidth": 2,
+  "useTabs": true,
+  "tabWidth": 4,
   "trailingComma": "es5",
   "printWidth": 80
 }
