--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs-alt/axios": "^1.1.0",
     "@nuxtjs/leaflet": "^1.0.14",
     "@vesp/nuxt-fontawesome": "^1.1.0",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
