--- a/directus/docker-compose.yml
+++ b/directus/docker-compose.yml
@@ -13,11 +13,7 @@ services:
       ADMIN_EMAIL: 'root@root.com'
       ADMIN_PASSWORD: '12root34'
       DB_CLIENT: 'pg'
-      DB_HOST: 'c8lj070d5ubs83.cluster-czrs8kj4isg7.us-east-1.rds.amazonaws.com'
-      DB_PORT: '5432'
-      DB_DATABASE: 'ddf8fhht60hi19'
-      DB_USER: 'u7hipdmfa7bhhl'
-      DB_PASSWORD: 'p1b8fcbcbcc880da4d33d24ab758ab42e3a0da154e8c29e7d683025caeba43d0c'
+      CUSTOM_DATABASE_URL: 'postgres://u6q399niki4pkm:pbdaae4f2aaacd2685d2bb210db9921bb2e9b4b04ec0ba444cc1cd250de1a7724@c2v3jin4rntblb.cluster-czrs8kj4isg7.us-east-1.rds.amazonaws.com:5432/d553ngv6q8lrkk'
       DB_SSL: '{"rejectUnauthorized":false}'
       WEBSOCKETS_ENABLED: 'true'
       PUBLIC_URL: 'http://localhost:8055'
@@ -25,4 +21,4 @@ services:
       CORS_ORIGIN: 'https://naturaonecoat.vercel.app'
       CORS_METHODS: 'GET,POST,PATCH,PUT,DELETE,OPTIONS'
       CORS_HEADERS: 'Content-Type,Authorization'
-      CORS_CREDENTIALS: 'true'
+      CORS_CREDENTIALS: 'true'
