--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/leaflet": "^1.0.14",
     "@vesp/nuxt-fontawesome": "^1.1.0",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "@vueform/multiselect": "^2.6.10",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
